// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loading Component > Snapshots - ButtonLoading > should match snapshot - ButtonLoading with custom className 1`] = `
<div
  class="animate-spin rounded-full h-4 w-4 border-2 border-current border-t-transparent text-white"
/>
`;

exports[`Loading Component > Snapshots - ButtonLoading > should match snapshot - default ButtonLoading 1`] = `
<div
  class="animate-spin rounded-full h-4 w-4 border-2 border-current border-t-transparent"
/>
`;

exports[`Loading Component > Snapshots - Loading > should match snapshot - default size 1`] = `
<div
  class="flex flex-col items-center justify-center space-y-2"
>
  <div
    class="animate-spin rounded-full border-2 border-gray-300 border-t-blue-600 h-8 w-8"
  />
</div>
`;

exports[`Loading Component > Snapshots - Loading > should match snapshot - large size 1`] = `
<div
  class="flex flex-col items-center justify-center space-y-2"
>
  <div
    class="animate-spin rounded-full border-2 border-gray-300 border-t-blue-600 h-12 w-12"
  />
</div>
`;

exports[`Loading Component > Snapshots - Loading > should match snapshot - large with custom text 1`] = `
<div
  class="flex flex-col items-center justify-center space-y-2"
>
  <div
    class="animate-spin rounded-full border-2 border-gray-300 border-t-blue-600 h-12 w-12"
  />
  <p
    class="text-sm text-gray-600"
  >
    Please wait while we fetch your data
  </p>
</div>
`;

exports[`Loading Component > Snapshots - Loading > should match snapshot - medium size 1`] = `
<div
  class="flex flex-col items-center justify-center space-y-2"
>
  <div
    class="animate-spin rounded-full border-2 border-gray-300 border-t-blue-600 h-8 w-8"
  />
</div>
`;

exports[`Loading Component > Snapshots - Loading > should match snapshot - small size 1`] = `
<div
  class="flex flex-col items-center justify-center space-y-2"
>
  <div
    class="animate-spin rounded-full border-2 border-gray-300 border-t-blue-600 h-4 w-4"
  />
</div>
`;

exports[`Loading Component > Snapshots - Loading > should match snapshot - small with text 1`] = `
<div
  class="flex flex-col items-center justify-center space-y-2"
>
  <div
    class="animate-spin rounded-full border-2 border-gray-300 border-t-blue-600 h-4 w-4"
  />
  <p
    class="text-sm text-gray-600"
  >
    Processing...
  </p>
</div>
`;

exports[`Loading Component > Snapshots - Loading > should match snapshot - with custom className 1`] = `
<div
  class="flex flex-col items-center justify-center space-y-2 my-custom-class"
>
  <div
    class="animate-spin rounded-full border-2 border-gray-300 border-t-blue-600 h-8 w-8"
  />
  <p
    class="text-sm text-gray-600"
  >
    Loading...
  </p>
</div>
`;

exports[`Loading Component > Snapshots - Loading > should match snapshot - with text 1`] = `
<div
  class="flex flex-col items-center justify-center space-y-2"
>
  <div
    class="animate-spin rounded-full border-2 border-gray-300 border-t-blue-600 h-8 w-8"
  />
  <p
    class="text-sm text-gray-600"
  >
    Loading data...
  </p>
</div>
`;

exports[`Loading Component > Snapshots - PageLoading > should match snapshot - default PageLoading 1`] = `
<div
  class="min-h-screen flex items-center justify-center"
>
  <div
    class="flex flex-col items-center justify-center space-y-2"
  >
    <div
      class="animate-spin rounded-full border-2 border-gray-300 border-t-blue-600 h-12 w-12"
    />
    <p
      class="text-sm text-gray-600"
    >
      Loading...
    </p>
  </div>
</div>
`;
